obtener lista de preguntas terminado
